Move app to repo root for Vercel

--- a/soulset-navigator-v5.1-connected-responses/vercel.json
+++ b/soulset-navigator-v5.1-connected-responses/vercel.json
@@ -1,13 +1,7 @@
 {
   "version": 2,
   "routes": [
-    {
-      "src": "/api/health",
-      "dest": "/api/health.js"
-    },
-    {
-      "src": "/api/analyze",
-      "dest": "/api/analyze.js"
-    }
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
